--- a/synergy/mx/templates/supervisor_entries.html
+++ b/synergy/mx/templates/supervisor_entries.html
@@ -33,7 +33,7 @@ Table below provides list of processes and boxes known to the system
             <form method="POST" action="{{ action_url }}">
                 <input type="hidden" name="box_id" value="{{ bc_entry.box_id }}" />
                 <input type="hidden" name="process_name" value="{{ bc_entry.process_name }}" />
-                <input type="submit" class="action_button fa-input" title="{{ button_title }}" value="{{ button_value }}"/>
+                <input type="submit" class="action_button fa-input" title="{{ button_title }}" value="{{ button_value|safe }}"/>
             </form>
         </td>
     </tr>
