--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -8,78 +8,62 @@ body {
 }
 
 .grid-container {
-    width: 100%;
-    float: left;
-    clear: left;
-    min-width: 1200px;
+/*     width: 100%; */
+    /* float: left; */
+/*     clear: left; */
+/*     width: 100%; */
+/*     grid-template: repeat(5, 20%) / repeat(3, 20%); */
+/*     grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(3, 20%); */
+    /* width: 100%; */
+    font-size: 0.82654rem;
+    /* display: grid; */
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-auto-flow: row; */
+    /* grid-column-gap: 1rem; */
+    /* grid-gap: 0.5rem 0.75rem;
+    justify-content: space-between; */
+    /* margin-bottom: 2rem; */
+    background-color: whitesmoke;
 }
 
-.grid-container.spacer {
-    margin-bottom: 40px;
+.grid-row {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0.75rem;
+    justify-content: space-between;
+    margin: 1rem 0;
 }
+
+/* .grid-container.spacer {
+    margin-bottom: 40px;
+} */
 
 .grid-header {
-    width: 16%;
-    height: 170px;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    background-color: whitesmoke;
-    margin-right: 0.5%;
-    margin-bottom: 10px;
-    float: left;
-    min-width: 244px;
+    background-color: lightsalmon;
 }
 
-.grid-header > div {
-    padding-top: 5px;
-    padding-left: 5px;
+.grid-header, .grid-info {
+    height: 100%;
 }
 
-.grid-header > div textarea {
-    width: 80%;
+.grid-header > div, .grid-info > div {
+    padding: 0.86824rem;
+}
+
+/* .grid-header > div textarea {
     margin-bottom: 5px;
-    min-width: 160px;
-}
+} */
 
 .grid-info {
-    width: 16%;
-    height: 400px;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    background-color: whitesmoke;
-    float: left;
-    margin-right: 0.5%;
-    margin-bottom: 5px;
-    min-width: 244px;
 }
 
 .grid-info > div {
-    padding-top: 5px;
-    padding-left: 5px;
+    margin: 1rem 0;
 }
 
-.grid {
-    width: 95%;
-    height: 600px;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    background-color: #ddd;
-    margin: 10px 0;
-    border: 10px solid #ddd;
-    clear: both;
-}
-
-.grid > div {
-    background-color: #fff;
-    position: absolute;
-}
-
-.grid-info > div {
-    background-color: #fff;
-    position: absolute;
+.grid-info > div:first-child {
+    margin: 0;
 }
 
 .action_button {
@@ -98,7 +82,7 @@ body {
 }
 
 div.tree_header_tile {
-    background-color: lightsalmon;
+    background: lightsalmon;
 }
 
 div.process_header_tile_off {
@@ -114,7 +98,7 @@ div.process_header_tile_off .fa-ul, div.process_header_tile_on .fa-ul {
 }
 
 div.process_info_tile {
-    background-color: #ffbb88;
+    background: #ffbb88;
 }
 
 div.table_layout {
@@ -131,11 +115,11 @@ div.tile_component {
 }
 
 div.is_selected_timeperiod {
-    border: 2px dotted darkorange;
+    outline: 2px dotted darkorange;
 }
 
 div.is_next_timeperiod {
-    border: 2px solid darkred;
+    outline: 2px solid darkred;
 }
 
 div.state_embryo {
