--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -1,27 +1,30 @@
 {% extends 'main_header.html' %}
 {% block body %}
+<div class="grid-container">
     {# active_mx_page is declared in the main_header.html#}
     {% set mx_trees = details.mx_page_trees(active_mx_page[0]) %}
+    <!-- NOTE: data is requested from mx/views.py -->
     {%- for tree_name, tree_obj in mx_trees.items() %}
-        <div class="grid-container">
+        <div class="grid-row">
             <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-header-{{ process_name }}" class="grid-header"></div>
             {%- endfor %}
         </div>
-        <div class="grid-container spacer">
+        <div class="grid-row">
             <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
             {%- endfor %}
         </div>
     {% endfor -%}
-
+</div>
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
 
 <script type="text/javascript">
     var mx_trees = {{ details.mx_page_trees(active_mx_page[0])|jsonify|safe }};
+    console.log(mx_trees)
 </script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
