--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -1,38 +1,30 @@
-body {
-    padding: 20px;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-
 .fa-input {
     font-family: FontAwesome, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .grid-container {
-/*     width: 100%; */
-    /* float: left; */
-/*     clear: left; */
-/*     width: 100%; */
-/*     grid-template: repeat(5, 20%) / repeat(3, 20%); */
-/*     grid-template-columns: repeat(5, 20%);
-    grid-template-rows: repeat(3, 20%); */
-    /* width: 100%; */
-    font-size: 0.82654rem;
-    /* display: grid; */
-    /* grid-template-columns: repeat(5, 1fr); */
-    /* grid-auto-flow: row; */
-    /* grid-column-gap: 1rem; */
-    /* grid-gap: 0.5rem 0.75rem;
-    justify-content: space-between; */
-    /* margin-bottom: 2rem; */
-    background-color: whitesmoke;
+    margin: 2rem 4rem;
 }
 
 .grid-row {
+    background-color: whitesmoke;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
     grid-gap: 0.75rem;
     justify-content: space-between;
-    margin: 1rem 0;
+    margin: 1rem 0 3rem 0;
+    height: 90vh;
+}
+
+.grid-row .header {
+    height: 100%
+}
+
+.grid-row-tree_site {
+    grid-template-columns: auto repeat(4, 1fr);
+}
+
+.grid-row-tree_client {
+    grid-template-columns: auto repeat(3, 1fr);
 }
 
 /* .grid-container.spacer {
@@ -40,7 +32,9 @@ body {
 } */
 
 .grid-header {
-    background-color: lightsalmon;
+    /* background-color: lightsalmon; */
+    background-color: #C1CAD6;
+    box-sizing: border-box;
 }
 
 .grid-header, .grid-info {
@@ -56,6 +50,9 @@ body {
 } */
 
 .grid-info {
+    height: 100%;
+    overflow-y: scroll;
+    box-sizing: border-box;
 }
 
 .grid-info > div {
@@ -67,9 +64,12 @@ body {
 }
 
 .action_button {
-    display: inline-block;
-    width: 110px;
-    padding: 1px;
+    font-size: 0.9265rem;
+display: inline-block;
+width: 86px;
+padding: 8px;
+text-align: left;
+margin: 2px 4px;
 }
 
 .action_toogle:hover {
@@ -81,8 +81,14 @@ body {
     clear: both;
 }
 
+.header-tile-icons {
+    display: flex;
+}
+
+
+
 div.tree_header_tile {
-    background: lightsalmon;
+    /* background: #C1CAD6; */
 }
 
 div.process_header_tile_off {
@@ -90,12 +96,13 @@ div.process_header_tile_off {
 }
 
 div.process_header_tile_on {
-    background-color: lightsalmon;
+    /* background-color: lightsalmon; */
+    background-color: #DDE1E4;
 }
 
-div.process_header_tile_off .fa-ul, div.process_header_tile_on .fa-ul {
+/* div.process_header_tile_off .fa-ul, div.process_header_tile_on .fa-ul {
     margin-bottom: 2px;
-}
+} */
 
 div.process_info_tile {
     background: #ffbb88;
