--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -5,13 +5,14 @@
     {% set mx_trees = details.mx_page_trees(active_mx_page[0]) %}
     <!-- NOTE: data is requested from mx/views.py -->
     {%- for tree_name, tree_obj in mx_trees.items() %}
-        <div class="grid-row">
+        <h2>{%- print(tree_name) %}</h2>
+        <div class="grid-row grid-row-{{ tree_name }}">
             <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-header-{{ process_name }}" class="grid-header"></div>
             {%- endfor %}
-        </div>
-        <div class="grid-row">
+        <!-- </div>
+        <div class="grid-row"> -->
             <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
@@ -24,6 +25,8 @@
 
 <script type="text/javascript">
     var mx_trees = {{ details.mx_page_trees(active_mx_page[0])|jsonify|safe }};
+    let treeSite = mx_trees.tree_site
+    let treeClient = mx_trees.tree_client
     console.log(mx_trees)
 </script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
