--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
@@ -25,12 +25,13 @@
 
     {# Jinja2 variable scope visibility workaround: declared as a list so it is available to inherited templates #}
     {% set active_mx_page = [] %}
-
+    <!-- TODO: figure out how to do this in javascript -->
     {% macro render_td(endpoint, title) %}
     {% set td_class = '' %}
     {%- if endpoint in local.request.path -%}
     <script type="text/javascript">
-        var active_mx_page = "{{ endpoint|lstrip_slash|safe }}";
+        let active_mx_page = "{{ endpoint|lstrip_slash|safe }}";
+        console.log(active_mx_page)
     </script>
     {% do active_mx_page.append(endpoint|lstrip_slash|safe) %}
     {% set td_class = 'class="active"' %}
@@ -69,9 +70,9 @@
         </table> -->
         <div class="nav">
             <div class="inline title">
-                <h1 class="inline">Synergy Scheduler</h1>
+                <h3 class="inline">Synergy Scheduler</h3>
             </div>
-            <div class="navbar">
+            <div class="navbar" id="navbar">
                 <!-- <div class="nav-item"><a href="{{  url_for('dashboard_managed')}}">dashboard jobs</a>
                 </div>
                 <div class="nav-item"><a href="{{  url_for('dashboard_freeruns')}}">dashboard
@@ -93,7 +94,7 @@
                 <a class="nav-item" href="{{  url_for('dashboard_freeruns')}}">dashboard
                     freeruns</a>
                 {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
-                <a class="nav-item" href="{{ '/' + mx_rule }}">{{ mx_page_name }}</a>
+                <a class="nav-item" href="{{ '/' + mx_rule + '/' }}">{{ mx_page_name }}</a>
 
                 {%- endfor -%}
                 <a class="nav-item" href="{{  url_for('scheduler_managed_entries')}}">scheduler
@@ -109,34 +110,46 @@
 
 
         <div class="container-fluid">
-            {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
-            {{ block_enable_refresh.enable_auto_refresh() }}
-
             {% macro render_td(endpoint, title) %}
             {%- if endpoint in local.request.path -%}
             <script type="text/javascript">
                 var active_mx_page = "{{ endpoint|lstrip_slash|safe }}";
-                console.log(active_mx_page)
             </script>
             {% do active_mx_page.append(endpoint|lstrip_slash|safe) %}
             {% set td_class = 'class="active"' %}
             {%- endif -%}
 
-            <h2>{{ title }}</h2>
             {% endmacro %}
 
             {% block body %}
             {% endblock %}
         </div>
 
-        <div id="footer" class="table_layout">
-            <div class="table_layout_element">
+        <div class="footer">
+            <span class="footer-time">
                 page rendered: {{ get_current_time() }}
-            </div>
-            <div class="table_layout_element" style="text-align: right">
+            </span>
+            <span class="footer-contact">
                 <a href="mailto:scheduler.feedback@gmail.com?subject=Comments to Scheduler MX page">Feedback</a>
-            </div>
+            </span>
         </div>
+
+        <script type="text/javascript">
+            // remove query parameters etc.
+            function stripUrl(url) {
+                return url.split(/[?#]/)[0]
+            }
+
+            let nav = document.getElementById('navbar')
+            let items = nav.getElementsByClassName('nav-item')
+            for (let i = 0; i < items.length; i++) {
+                let url = stripUrl(items[i].href)
+                if (url === stripUrl(window.location.href)) {
+                    items[i].className += " active"
+                }
+            }
+        </script>
+
     </body>
 
 </html>
