--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -1,33 +1,39 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
-    <title>Object Viewer</title>
-</head>
+<!DOCTYPE html>
+<html lang="en">
 
-<body>
-<pre id="json"></pre>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
+        <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
+        <title>Object Viewer</title>
+    </head>
 
-<form style="text-align: center">
-    <input type="button" class="action_button fa-input" value="&#xf00d;&nbsp;Close" onclick="window.close()"/>
-</form>
+    <body>
+        <div class="container">
+            <pre id="json"></pre>
 
-<script type="text/javascript">
-    $(function () {  // former $(document).ready(function () {...})
-        var action = getUrlParameter('action');
-        var url = '/' + action + '/?' + window.location.search.substring(1);
+            <form style="text-align: center">
+                <input type="button" class="action_button fa-input" value="&#xf00d;&nbsp;Close"
+                    onclick="window.close()" />
+            </form>
 
-        $.get(url, function (data) {
-            $("#json").text(formatJSON(data));
-        });
-    });
-</script>
+            <script type="text/javascript">
+                $(function () {  // former $(document).ready(function () {...})
+                    var action = getUrlParameter('action');
+                    var url = '/' + action + '/?' + window.location.search.substring(1);
 
-</body>
+                    $.get(url, function (data) {
+                        $("#json").text(formatJSON(data));
+                    });
+                });
+            </script>
+        </div>
+    </body>
+
 </html>
